Update stale.yml to not exempt all assignees
Change exempt-all-assignees setting to false.

--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -42,11 +42,11 @@ jobs:
             Closing this pull request due to inactivity.
 
           # 有这些标签的 issue / PR 不会被处理
-          exempt-issue-labels: pinned,security,bug
+          exempt-issue-labels: pinned,security
           exempt-pr-labels: pinned,security
 
           # 有 assignee 的不处理（可选）
-          exempt-all-assignees: true
+          exempt-all-assignees: false
 
           # 有 milestone 的不处理（可选）
           exempt-all-milestones: true
